trunk/Archive2/4c/72b28bb816b2bf/output
main.cpp: In constructor 'X::X(int)':
main.cpp:4:32: error: 'cout' is not a member of 'std'
     X(int i) : _i(i)         { std::cout << __PRETTY_FUNCTION__ << "(" << i << ")" << "\n"; }
                                ^
main.cpp: In constructor 'X::X(X&&)':
main.cpp:5:32: error: 'cout' is not a member of 'std'
     X(X && x) : _i(x._i)     { std::cout << __PRETTY_FUNCTION__ << "(" << x << ")" << "\n"; }
                                ^
main.cpp: In copy constructor 'X::X(const X&)':
main.cpp:6:32: error: 'cout' is not a member of 'std'
     X(X const& x) : _i(x._i) { std::cout << __PRETTY_FUNCTION__ << "(" << x << ")" << "\n"; }
                                ^
main.cpp: In destructor 'X::~X()':
main.cpp:7:32: error: 'cout' is not a member of 'std'
     ~X()                     { std::cout << __PRETTY_FUNCTION__ << "\n"; }
                                ^
main.cpp: In static member function 'static void* X::operator new(size_t)':
main.cpp:10:10: error: 'cout' is not a member of 'std'
          std::cout << __PRETTY_FUNCTION__ << "(" << n << ")" << "\n";
          ^
main.cpp: In static member function 'static void X::operator delete(void*)':
main.cpp:15:10: error: 'cout' is not a member of 'std'
          std::cout << __PRETTY_FUNCTION__ << "\n";
          ^
main.cpp: In member function 'X& X::operator=(const X&)':
main.cpp:21:9: error: 'cout' is not a member of 'std'
         std::cout << __PRETTY_FUNCTION__ << "(" << x << ")" << "\n"; 
         ^
main.cpp: In member function 'X& X::operator=(X&&)':
main.cpp:27:9: error: 'cout' is not a member of 'std'
         std::cout << __PRETTY_FUNCTION__ << "(" << x << ")" << "\n"; 
         ^
main.cpp: In function 'int main()':
main.cpp:46:9: error: 'cout' is not a member of 'std'
         std::cout << p << " ";
         ^
main.cpp:48:5: error: 'cout' is not a member of 'std'
     std::cout << "\n===============================\nswapping v[1] and v[2]:\n";
     ^
main.cpp:53:5: error: 'cout' is not a member of 'std'
     std::cout << "\n===============================\n";
     ^
main.cpp:56:9: error: 'cout' is not a member of 'std'
         std::cout << p << " ";
         ^
